; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_set_tags.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_set_tags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }
%struct.scsi_cmnd = type { %struct.scsi_device* }
%struct.scsi_device = type { i32 }
%struct.ahd_devinfo = type { i32, i32, i32 }

@AC_TRANSFER_NEG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ahd_softc*, %struct.scsi_cmnd*, %struct.ahd_devinfo*, i32)* @ahd_set_tags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ahd_set_tags(%struct.ahd_softc* %0, %struct.scsi_cmnd* %1, %struct.ahd_devinfo* %2, i32 %3) #0 {
  %5 = alloca %struct.ahd_softc*, align 8
  %6 = alloca %struct.scsi_cmnd*, align 8
  %7 = alloca %struct.ahd_devinfo*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.scsi_device*, align 8
  store %struct.ahd_softc* %0, %struct.ahd_softc** %5, align 8
  store %struct.scsi_cmnd* %1, %struct.scsi_cmnd** %6, align 8
  store %struct.ahd_devinfo* %2, %struct.ahd_devinfo** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %6, align 8
  %11 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %10, i32 0, i32 0
  %12 = load %struct.scsi_device*, %struct.scsi_device** %11, align 8
  store %struct.scsi_device* %12, %struct.scsi_device** %9, align 8
  %13 = load %struct.ahd_softc*, %struct.ahd_softc** %5, align 8
  %14 = load %struct.scsi_device*, %struct.scsi_device** %9, align 8
  %15 = load %struct.ahd_devinfo*, %struct.ahd_devinfo** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @ahd_platform_set_tags(%struct.ahd_softc* %13, %struct.scsi_device* %14, %struct.ahd_devinfo* %15, i32 %16)
  %18 = load %struct.ahd_softc*, %struct.ahd_softc** %5, align 8
  %19 = load %struct.ahd_devinfo*, %struct.ahd_devinfo** %7, align 8
  %20 = getelementptr inbounds %struct.ahd_devinfo, %struct.ahd_devinfo* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.ahd_devinfo*, %struct.ahd_devinfo** %7, align 8
  %23 = getelementptr inbounds %struct.ahd_devinfo, %struct.ahd_devinfo* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.ahd_devinfo*, %struct.ahd_devinfo** %7, align 8
  %26 = getelementptr inbounds %struct.ahd_devinfo, %struct.ahd_devinfo* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @AC_TRANSFER_NEG, align 4
  %29 = call i32 @ahd_send_async(%struct.ahd_softc* %18, i32 %21, i32 %24, i32 %27, i32 %28)
  ret void
}

declare dso_local i32 @ahd_platform_set_tags(%struct.ahd_softc*, %struct.scsi_device*, %struct.ahd_devinfo*, i32) #1

declare dso_local i32 @ahd_send_async(%struct.ahd_softc*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
